--- a/MOCK_CourseAPI/CourseAPI.csproj
+++ b/MOCK_CourseAPI/CourseAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MOCK_Course.DAL\MOCK_Course.DAL.csproj" />
+    <ProjectReference Include="..\LoggerService\LoggerService.csproj" />
+    <ProjectReference Include="..\MOCK_Course.DAL\Course.DAL.csproj" />
   </ItemGroup>
 
 </Project>
