add relation db

--- a/MOCK_Course.BLL/Course.BLL.csproj
+++ b/MOCK_Course.BLL/Course.BLL.csproj
@@ -13,4 +13,8 @@
     <Folder Include="DTOs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MOCK_Course.DAL\Course.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
