--- a/MOCK_CourseAPI/appsettings.json
+++ b/MOCK_CourseAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MOCK_Course": "Data Source=.;Initial Catalog=MOCK_Course;Integrated Security=True"
+    "MOCK_Course": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MOCK_Course;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
