--- a/MOCK_Course.BLL/Course.BLL.csproj
+++ b/MOCK_Course.BLL/Course.BLL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Folder Include="Extensions\" />
     <Folder Include="DTOs\" />
+    <Folder Include="ModelRequest\" />
   </ItemGroup>
 
   <ItemGroup>
